Json writer added